# line-detector

./: CMakeLists.txt  main.cpp
